# pyTransit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config_example.yaml  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION.md  README.md  USAGE_GUIDE.md  api.md  usage.md
examples/: config_example.yaml  config_wasp75b.yaml  tutorial.ipynb
examples/outputs/: config_used.yaml  fit_results.json  lightcurve_detrended.csv  lightcurve_raw.csv
pyTransit/: cli.py  config.py  detection.py  io.py  lightcurve.py  pipeline.py
pyTransitPhotometry/: __init__.py  background.py  calibration.py  cli.py  config.py  constants.py  detection.py  detrending.py  io.py  lightcurve.py  models.py  photometry.py  pipeline.py  psf.py  visualization.py
tests/: helpers.py  test_calibration.py  test_detrending.py  test_models.py  test_photometry.py  test_pipeline.py
